--- a/content/04-build-model/build_rxgb.qmd
+++ b/content/04-build-model/build_rxgb.qmd
@@ -96,11 +96,13 @@ bake(recipe_spec_prepped, head(train_data))
 
 ## Fit model
 
-Fit an XGBoost model:
+Fit a random forest model:
 
 ```{r}
 # workflow
-model_spec <- rand_forest(mode = "regression")
+model_spec <- rand_forest(trees = 200) %>%
+  set_mode("regression") %>%
+  set_engine("ranger")
 
 model_workflow <- 
   workflow() %>%
@@ -122,26 +124,33 @@ results <- test_data %>%
 oos_metrics(results$n_bikes, results$preds)
 ```
 
-# Deploy the model using `vetiver`
+# Model deployment
 
-Create a vetiver model object.
+## `vetiver`
+
+Create a `vetiver` model object.
 
 ```{r create_vetiver_model}
 model_name <- "bike_predict_model_r"
 
 v <- vetiver_model(
   model_fit, 
-  model_name, 
+  model_name,
+  versioned = TRUE,
   save_ptype = train_data %>%
-    head(1)
+    head(1) %>%
+    select(-n_bikes)
 )
 
 v
 ```
 
+## `pins`
+
 Save the model as a *pin* to RStudio Connect:
 
 ```{r pin_model}
+# Use RStudio Connect as a board.
 board <- pins::board_rsconnect(
   server = Sys.getenv("CONNECT_SERVER"),
   key = Sys.getenv("CONNECT_API_KEY"),
@@ -153,80 +162,89 @@ board %>%
  vetiver_pin_write(v)
 ```
 
-Check out how many models have been written to the board:
+Check out the version history of the model:
 
 ```{r}
 pin_name <- glue("sam.edwardes/{model_name}")
-
 print(glue("Connect to pin named: {pin_name}"))
 
 board %>% 
   pins::pin_versions(pin_name)
 ```
 
+## `plumber`
+
 Convert the model into a plumber API. The function `vetiver_write_plumber` will generate the plumber code for you and write it to *plumber.R*.
 
 ```{r deploy_model}
-# Write the model to `plumber.R`.
-vetiver_write_plumber(board, pin_name)
+if (!dir.exists("./api")) {
+  dir.create("./api")
+}
+
+# Write the model to `api/plumber.R`.
+vetiver_write_plumber(board, pin_name, file = "api/plumber.R")
+
+# Write a manifest.json file for the api
+rsconnect::writeManifest("api")
 ```
+
+Here is what the plumber file looks like:
+
+```{r preview_plumber_file}
+readLines("api/plumber.R") %>%
+  paste(collapse = "\n") %>%
+  cat()
+```
+
+## RStudio Connect
 
 Then, deploy the plumber API to RStudio Connect.
 
 ```{r}
-app_title <- "Bike Predict XGBoost Prediction API (R)"
+app_name <- "bike-predict-api-r"
+app_title <- "Bike Predict API (R)"
 
-rsconnect::deployAPI(
-  ".",
-  appFiles = c("plumber.R"),
-  appTitle = app_title
-)
-```
+# rsconnect::deployAPI(
+#   ".",
+#   appFiles = c("plumber.R"),
+#   appTitle = app_title
+# )
 
-Get the unique identifier of the app so that we can call the API.
-
-```{r}
-client <- connectwidgets::connect(
-  server  = Sys.getenv("CONNECT_SERVER"),
+# Establish a connectionn to RStudio connect.
+client <- connectapi::connect(
+  server = Sys.getenv("CONNECT_SERVER"),
   api_key = Sys.getenv("CONNECT_API_KEY")
 )
 
-content_guid <- client %>%
-  connectwidgets::content() %>%
-  connectwidgets::by_owner("sam.edwardes") %>%
-  filter(title == app_title) %>%
-  pull(guid)
+tags <- client %>%
+  connectapi::get_tags()
 
-print(content_guid)
+# Deploy the content.
+content <- 
+  client %>%
+  connectapi::deploy(
+    connectapi::bundle_dir("api"),
+    name = app_name,
+    title = app_title
+  )
+
+# Update content settings.
+content %>%
+  connectapi::set_vanity_url("bike-predict-api-r") %>%
+  connectapi::set_content_tags(tags$`Projects and Presentations`$`Bike Predict`$R)
 ```
+
 
 Called the deployed API to verify that it is working.
 
 ```{r}
-url <- glue("{Sys.getenv('CONNECT_SERVER')}/content/{content_guid}/predict")
+url <- glue("{content$get_url()}predict")
 endpoint <- vetiver_endpoint(url)
 endpoint
 ```
 
 ```{r}
 predict(endpoint, head(test_data, 2))
-```
-
-**OLD**
-
-```{r pin_mod}
-model_details <- list(
-     model = mod,
-     train_date = today(),
-     train_window_start = start_train_date,
-     split_date = split_date, 
-     recipe = recipe
-)
-
-pins::pin(model_details, 
-          "bike_model_rxgb", 
-          "Model of Capitol Citybikes Available per Station", 
-          board = "rsconnect")
 ```
 
 ```{r}
