--- a/content/02-model/01-train-and-deploy-model/train_and_deploy_model.qmd
+++ b/content/02-model/01-train-and-deploy-model/train_and_deploy_model.qmd
@@ -4,7 +4,7 @@ date: "`r Sys.time()`"
 output: html_document
 ---
 
-```{r}
+```{r load_libraries}
 library(dplyr)
 library(glue)
 library(recipes)
@@ -14,19 +14,25 @@ library(vetiver)
 
 # Internally developed packages
 library(bikeHelpR)
+
+# The following packages are not directly called, but are requirements. They
+# need to be here so that `rsconnect::writeManifest` is able to capture them
+# as a dependency.
+library(dbplyr)
+library(ranger)
 ```
 
 # Get data
 
 Connect to the database:
 
-```{r}
+```{r connect_to_db}
 con <- DBI::dbConnect(odbc::odbc(), "Content DB")
 ```
 
 Split the data into a train/test split:
 
-```{r}
+```{r train_test_split_data}
 all_days <- tbl(con, "bike_model_data")
 
 # Get a vector that contains all of the dates.
@@ -81,7 +87,7 @@ print(glue::glue(
 
 Define a recipe to clean the data.
 
-```{r}
+```{r define_recipe}
 # Define a recipe to clean the data.
 recipe_spec <- 
   recipe(n_bikes ~ ., data = train_data) %>% 
@@ -98,11 +104,16 @@ bake(recipe_spec_prepped, head(train_data))
 
 Fit a random forest model:
 
-```{r}
+```{r fit_model}
 # workflow
-model_spec <- rand_forest(trees = 200) %>%
+# model_spec <- rand_forest(trees = 200) %>%
+#   set_mode("regression") %>%
+#   set_engine("ranger")
+
+model_spec <-
+  boost_tree(trees = 15) %>%
   set_mode("regression") %>%
-  set_engine("ranger")
+  set_engine("xgboost")
 
 model_workflow <- 
   workflow() %>%
@@ -164,7 +175,7 @@ board %>%
 
 Check out the version history of the model:
 
-```{r}
+```{r inspect_history_of_model_pins}
 pin_name <- glue("sam.edwardes/{model_name}")
 print(glue("Connect to pin named: {pin_name}"))
 
@@ -176,7 +187,7 @@ board %>%
 
 Convert the model into a plumber API. The function `vetiver_write_plumber` will generate the plumber code for you and write it to *plumber.R*.
 
-```{r deploy_model}
+```{r write_model_to_plumber}
 # Write the model to `api/plumber.R`.
 vetiver_write_plumber(board, pin_name, file = "api/plumber.R")
 
@@ -196,11 +207,11 @@ readLines("api/plumber.R") %>%
 
 Then, deploy the plumber API to RStudio Connect.
 
-```{r}
-app_name <- "bike-predict-api-r"
-app_title <- "Bike Predict API (R)"
+```{r deploy_model_api_to_connect}
+app_name <- "bike-predict-r-api"
+app_title <- "Bike Predict (R) - Model - API"
 
-# Establish a connectionn to RStudio connect.
+# Establish a connection to RStudio connect.
 client <- connectapi::connect(
   server = Sys.getenv("CONNECT_SERVER"),
   api_key = Sys.getenv("CONNECT_API_KEY")
@@ -221,13 +232,8 @@ content <-
 # Make the app visible to the world!
 content$update(access_type = "all")
 
-client %>% 
-  connectapi::get_groups(page_size = 500, limit = 500) %>%
-  filter("sol" %in% tolower(name))
-
 # Define the contents collaborators
 collaborators <- c(
-  # "d03a6b7a-c818-4e40-8ef9-84ca567f9671", # Sam Edwardes
   "69db516b-ba3e-442a-84d9-f916fc92a2ca", # Gagan Singh
   "99a43fac-2edd-4c31-8cba-a001c507da2e"  # Xu Fei
   
@@ -239,25 +245,24 @@ for (c in collaborators) {
 
 # Update content settings.
 content %>%
-  connectapi::set_vanity_url("bike-predict-api-r") %>%
-  connectapi::set_content_tags(tags$`Projects and Presentations`$`Bike Predict`$R) %>%
-  connectapi::set_image_path("../../../img/bike_share_connect_image.drawio.png") %>%
-  connectapi::add
+  connectapi::set_vanity_url("bike-predict-r-api") %>%
+  connectapi::set_content_tags(tags$`Projects and Presentations`$`Bike Predict`$R)
 ```
 
 Called the deployed API to verify that it is working.
 
-```{r}
+```{r establish_endpoint}
 url <- glue("{content$get_url()}predict")
 endpoint <- vetiver_endpoint(url)
 endpoint
 ```
 
-```{r}
+```{r test_endpoint}
+Sys.sleep(10)
 predict(endpoint, head(test_data, 2)) %>%
   bind_cols(head(test_data, 2))
 ```
 
-```{r}
+```{r close_db_connection}
 DBI::dbDisconnect(con)
 ```
