--- a/deploy_all_content.qmd
+++ b/deploy_all_content.qmd
@@ -10,5 +10,130 @@ library(connectapi)
 
 The purpose of this document is to deploy all `bike_predict` related content to RStudio Connect. It should be run from RStudio Workbench (or your local development environment). This document itself is not meant to be published.
 
-## 01-etl
+```{r}
+deploy_content_to_connect <- function(
+    client, 
+    app_name, 
+    app_title, 
+    app_directory_location, 
+    app_files,
+    vanity_url
+  ) {
+  # Wrate a manfifest file.
+  rsconnect::writeManifest(
+    appDir = app_directory_location, 
+    appFiles = app_files
+  )
+  
+  tags <- client %>%
+    get_tags()
+  
+  # Deploy the content.
+  content <- 
+    client %>%
+    deploy(
+      bundle_dir(app_directory_location),
+      name = app_name,
+      title = app_title
+    )
+  
+  # Make the app visible to the world!
+  content$update(access_type = "all")
+  
+  # Define the contents collaborators
+  collaborators <- c(
+    "69db516b-ba3e-442a-84d9-f916fc92a2ca", # Gagan Singh
+    "99a43fac-2edd-4c31-8cba-a001c507da2e"  # Xu Fei
+    
+  )
+  for (c in collaborators) {
+    content %>%
+      content_add_user(c, role = "owner")
+  }
+  
+  # Update content settings.
+  content %>%
+    set_vanity_url(vanity_url) %>%
+    set_content_tags(tags$`Projects and Presentations`$`Bike Predict`$R) %>%
+    set_image_path("./img/bike_share_connect_image.drawio.png")
+  
+  content
+}
+```
+
+```{r}
+# Establish a connection to RStudio connect.
+client <- connect(
+  server = Sys.getenv("CONNECT_SERVER"),
+  api_key = Sys.getenv("CONNECT_API_KEY")
+)
+```
+
+## 01 ETL
+
+### 1.1 Update the database
+
+```{r}
+content_get_data_from_db <- deploy_content_to_connect(
+  client = client,
+  app_name = "bike-predict-r-update-db",
+  app_title = "Bike Predict (R) - ETL Step 01 - Update the Database",
+  app_directory_location = "./content/01-etl/01-update-db/",
+  app_files = "update_db.qmd",
+  vanity_url = "bike-predict-r-update-db"
+)
+
+content_get_data_from_db %>% browse_dashboard()
+```
+
+### 1.2 Clean the data
+
+```{r}
+content_tidy_data <- deploy_content_to_connect(
+  client = client,
+  app_name = "bike-predict-r-tidy-data",
+  app_title = "Bike Predict (R) - ETL Step 02 - Tidy the data",
+  app_directory_location = "./content/01-etl/02-tidy-data/",
+  app_files = "tidy_data.qmd",
+  vanity_url = "bike-predict-r-tidy-data"
+)
+
+content_tidy_data %>% browse_dashboard()
+```
+
+### 1.3 Clean the data
+
+```{r}
+content_tidy_data <- deploy_content_to_connect(
+  client = client,
+  app_name = "bike-predict-r-tidy-data",
+  app_title = "Bike Predict (R) - ETL Step 02 - Tidy the data",
+  app_directory_location = "./content/01-etl/02-tidy-data/",
+  app_files = "tidy_data.qmd",
+  vanity_url = "bike-predict-r-tidy-data"
+)
+
+content_tidy_data %>% browse_dashboard()
+```
+
+## 02 Model
+
+### 2.1 Train and deploy the model
+
+```{r}
+content_train_model <- deploy_content_to_connect(
+  client = client,
+  app_name = "bike-predict-r-train-and-deploy-model",
+  app_title = "Bike Predict (R) - Model - Train and Deploy Model",
+  app_directory_location = "./content/02-model/01-train-and-deploy-model",
+  app_files = "train_and_deploy_model.qmd",
+  vanity_url = "bike-predict-r-train-and-deploy-model"
+)
+
+content_train_model %>% browse_dashboard()
+```
+
+```{r}
+
+```
 
