Confirmed 02-tidy-data working and deployed

--- a/content/01-etl/01-update-db/update_db.qmd
+++ b/content/01-etl/01-update-db/update_db.qmd
@@ -6,7 +6,7 @@ output: html_document
 
 This notebook uses the [bikeHelpR](https://packagemanager.rstudio.com/client/#/repos/1/packages/bikeHelpR) package to update a database with the latest bike share data. The package pulls data from <https://capitalbikeshare.com> which provides an API to access bike share data. The raw data is written to the *Content DB* database to the *bike_raw_data* table.
 
-```{r setup}
+```{r setup, include=FALSE}
 knitr::opts_chunk$set(warning = FALSE, message = FALSE) 
 
 library(dplyr)
