--- a/content/01-etl/01-raw-data-refresh.qmd
+++ b/content/01-etl/01-raw-data-refresh.qmd
@@ -1,5 +1,5 @@
 ---
-title: "ETL Step 1 - Update the Database"
+title: "ETL Step 1 - Raw Data Refresh"
 date: "`r Sys.time()`"
 output: html_document
 ---
@@ -18,23 +18,26 @@ library(odbc)
 library(dbplyr)
 library(purrr)
 library(magrittr)
+library(httr)
 ```
 
 ## Get data from API
 
 Use the the `bikeHelpR` package to get the latest data from <https://capitalbikeshare.com>.
 
-```{r data}
-feeds_data <- 
+### Station status
+
+```{r station_status_data}
+feeds_station_status <- 
   bikeHelpR::feeds_urls() %>% 
   filter(name == "station_status") %>% 
   pull(url) %>% 
   bikeHelpR::get_data() 
 
 station_status <- 
-  feeds_data %>%
+  feeds_station_status %>%
   magrittr::extract2("data") %>%
-  dplyr::mutate(time = feeds_data$last_updated) %>%
+  dplyr::mutate(time = feeds_station_status$last_updated) %>%
   dplyr::select(
     is_installed, 
     num_bikes_available, 
@@ -52,14 +55,45 @@ station_status <-
 glimpse(station_status)
 ```
 
+### Station info
+
+```{r station_info_data}
+# The station information endpoint.
+station_information_url <- 
+  bikeHelpR::feeds_urls() %>% 
+  filter(name == "station_information") %>% 
+  pull(url)
+
+# Call the endpoint to obtain the JSON data.
+request <- httr2::request(station_information_url)
+response <- httr2::req_perform(request)
+json_data <- httr2::resp_body_json(response)
+
+# Convert the JSON data into a tibble.
+station_info <- 
+  json_data$data %>%
+  as_tibble() %>%
+  tidyr::unnest_wider(stations) %>%
+  select(station_id, name, lat, lon) %>%
+  distinct() %>%
+  mutate(
+    last_updated = as.POSIXct(
+      json_data$last_updated,
+      origin = "1970-01-01 00:00:00 UTC"
+    )
+  )
+
+glimpse(station_info)
+```
+
 ## Update database
 
-Write the new data from the API to the database. This code will only execute when run non-interactively. This is helpful so that duplicate rows are not added to the database when working on chnages to this report.
+Write the new data from the API to the database.
 
 ```{r write_to_db}
-if (interactive()) {
-  con <- dbConnect(odbc(), "Content DB", timeout = 10)
-  dbWriteTable(con, "bike_raw_data", station_status, append = TRUE)
-  dbDisconnect(con)
-}
+con <- dbConnect(odbc(), "Content DB", timeout = 10)
+dbWriteTable(con, "bike_raw_data", station_status, append = TRUE)
+dbWriteTable(con, "bike_station_info", station_info, overwrite = TRUE)
+dbDisconnect(con)
+print("Raw data updated 🎉")
 ```
